data/derived/comb/progs/unify/prog5427.ml.out
Characters 86-94:
  | _ -> buildSine(buildX)
                  ^^^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type expr
